feat: Atualização nos arquivos ignorados.

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ StyleCopReport.xml
 *.pgc
 *.pgd
 *.rsp
+# but not Directory.Build.rsp, as it configures directory-level build defaults
+!Directory.Build.rsp
 *.sbr
 *.tlb
 *.tli
@@ -153,6 +155,7 @@ coverage*.info
 
 # NCrunch
 _NCrunch_*
+.NCrunch_*
 .*crunch*.local.xml
 nCrunchTemp_*
 
@@ -396,3 +399,35 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+## ==============================================
+## Personal Ignore
+## ==============================================
+
+# Build results
+bin/
+
+# Rider settings
+.idea/
+
+# Mac OS files
+.DS_Store
+
+# Windows thumbnail cache
+Thumbs.db
+
+# NuGet packages
+packages/
+
+# Publish output
+publish/
+out/
+
+# Test results
+TestResults/
+*.trx
+
+# Others
+*.cache
+*.bak
